Finalização do cadastro de usuário com senha e sem senha
