# src/api/routes/index.js
@@ -80,7 +80,7 @@ routes.get(`/v1/usuarios`, asyncHandler(async (request, response) => {
     return await usuarioController.todosUsuarios(request, response);
 }));
 
-routes.post(`/v1/usuarios`, asyncHandler(async (request, response) => {
+routes.post(`/v1/usuarios/com-senha`, asyncHandler(async (request, response) => {
     // #swagger.tags = ['Usuários']
     // #swagger.description = 'Cadastrar um usuário com senha.'
 
@@ -120,6 +120,117 @@ routes.post(`/v1/usuarios`, asyncHandler(async (request, response) => {
      }
      */
     return await usuarioController.cadastrarUsuarioComSenha(request, response);
+}));
+
+routes.post(`/v1/usuarios/sem-senha`, asyncHandler(async (request, response) => {
+    // #swagger.tags = ['Usuários']
+    // #swagger.description = 'Cadastrar um usuário com senha.'
+
+    /*  #swagger.parameters['UsuarioSemSenha'] = {
+        in: 'body',
+        description: 'Cadastrar usuário sem senha.',
+        schema: { $ref: '#/definitions/UsuarioSemSenha' }
+    } */
+
+    /** #swagger.responses[200] = {
+        schema: { $ref: "#/definitions/Informativo" },
+        description: 'Usuário cadastrado.' 
+     } 
+    */
+
+    /** #swagger.responses[401] = {
+        schema: { $ref: "#/definitions/Error401" },
+        description: 'Não autorizado.' 
+     } 
+    */
+
+    /** #swagger.responses[403] = {
+        schema: { $ref: "#/definitions/Error403" },
+        description: 'Sem premissão.' 
+     } 
+    */
+
+    /** #swagger.responses[409] = {
+        schema: { $ref: "#/definitions/Error409" },
+        description: 'Duplicidade de dados.' 
+     } 
+    */
+
+    /** #swagger.responses[500] = {
+        schema: { $ref: "#/definitions/Error500" },
+        description: 'Erro interno.' 
+     }
+     */
+    return await usuarioController.cadastrarUsuarioSemSenha(request, response);
+}));
+
+routes.get(`/v1/usuarios/:id`, asyncHandler(async (request, response) => {
+    // #swagger.tags = ['Usuários']
+    // #swagger.description = 'Consulta usuário por id.'
+
+    //  #swagger.parameters['id'] = { description: 'Id do usuário.' }
+
+    /** #swagger.responses[200] = {
+        schema: { $ref: "#/definitions/Usuario" },
+        description: 'Usuário consultado.' 
+     } 
+    */
+
+    /** #swagger.responses[401] = {
+        schema: { $ref: "#/definitions/Error401" },
+        description: 'Não autorizado.' 
+     } 
+    */
+
+    /** #swagger.responses[403] = {
+        schema: { $ref: "#/definitions/Error403" },
+        description: 'Sem premissão.' 
+     } 
+    */
+
+    /** #swagger.responses[500] = {
+        schema: { $ref: "#/definitions/Error500" },
+        description: 'Erro interno.' 
+     }
+     */
+    return await usuarioController.buscarUsuarioPorId(request, response);
+}));
+
+routes.put(`/v1/usuarios/:id`, asyncHandler(async (request, response) => {
+    // #swagger.tags = ['Usuários']
+    // #swagger.description = 'Altera usuário por id.'
+
+    //  #swagger.parameters['id'] = { description: 'Id do usuário.' },
+    /*  #swagger.parameters['UsuarioComSenha'] = {
+        in: 'body',
+        description: 'Cadastrar usuário com senha.',
+        schema: { $ref: '#/definitions/UsuarioComSenha' }
+    } */
+
+    /** #swagger.responses[200] = {
+        schema: { $ref: "#/definitions/Usuario" },
+        description: 'Usuário alterado.' 
+     } 
+    */
+
+    /** #swagger.responses[401] = {
+        schema: { $ref: "#/definitions/Error401" },
+        description: 'Não autorizado.' 
+     } 
+    */
+
+    /** #swagger.responses[403] = {
+        schema: { $ref: "#/definitions/Error403" },
+        description: 'Sem premissão.' 
+     } 
+    */
+
+    /** #swagger.responses[500] = {
+        schema: { $ref: "#/definitions/Error500" },
+        description: 'Erro interno.' 
+     }
+     */
+    return await usuarioController.alterarUsuario(request, response);
 }));
 
 //#endregion
